--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,6 +24,8 @@ services:
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
         resource: '../src/Controller'
+        arguments:
+            - '@App\Generator\LockGenerator'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
