--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "symfony/dotenv": "^4.1",
+        "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "^4.1"
     },
     "config": {
