--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,9 @@ APP_SECRET=5b5c3454adfb6b4b7984df91577238e6
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> knplabs/github-api ###
+GITHUB_AUTH_METHOD=http_password
+GITHUB_USERNAME=username
+GITHUB_SECRET=password_or_token
+###< knplabs/github-api ###
