--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,11 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "knplabs/github-api": "^2.8",
+        "php-http/guzzle6-adapter": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "^4.1",
+        "symfony/filesystem": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
