--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,13 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "phpspec/phpspec": "^5.0",
         "symfony/dotenv": "^4.1",
         "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "^4.1"
     },
     "config": {
+        "bin-dir": "bin",
         "preferred-install": {
             "*": "dist"
         },
