Maj v9 yvan - add doc and readme - routing

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 app_lock:
-    path: /lock
+    path: /lock/{repository}/{type}
     controller: App\Controller\LockController::lock
+    defaults:
+        repository: "pim-community-dev"
+        type: "composer"
+
